--- a/settings.json
+++ b/settings.json
@@ -1,7 +1,7 @@
 {
     "editor.cursorBlinking": "solid",
     "editor.lineHeight": 16.8,
-    "editor.fontFamily": "'DeJaVu Sans Mono', 'Droid Sans Mono', 'Courier New', monospace, 'Droid Sans Fallback'",
+    "editor.fontFamily": "'DeJaVu Sans Mono', 'Droid Sans Mono', 'Fira Code', 'Courier New', monospace, 'Droid Sans Fallback'",
     "editor.fontLigatures": true,
     "editor.fontSize": 14,
     "editor.selectionHighlight": false,
@@ -27,6 +27,7 @@
     "telemetry.enableCrashReporter": false,
 
     "window.showFullPath": true,
+    "window.zoomLevel": 0,
 
     "go.buildOnSave": true,
     "go.lintOnSave": true,
