--- a/settings.json
+++ b/settings.json
@@ -26,6 +26,8 @@
     "telemetry.enableTelemetry": false,
     "telemetry.enableCrashReporter": false,
 
+    "workbench.welcome.enabled": false,
+
     "window.showFullPath": true,
     "window.zoomLevel": 0,
 
