Added workaround for vim :nohl.

--- a/settings.json
+++ b/settings.json
@@ -88,6 +88,10 @@
                     "args": []
                 }
             ]
+        },
+        {
+            "before": ["<C-a>"],
+            "after": ["/", "h", "@", "c", "k", "\n"]
         }
     ]
 }
