Updated settings and added php snippets.

--- a/config/settings.json
+++ b/config/settings.json
@@ -1,13 +1,14 @@
 {
     "editor.cursorBlinking": "solid",
-    "editor.lineHeight": 16.8,
     "editor.fontFamily": "'DeJaVu Sans Mono', 'Droid Sans Mono', 'Fira Code', 'Courier New', monospace, 'Droid Sans Fallback'",
     "editor.fontLigatures": true,
     "editor.fontSize": 14,
-    "editor.selectionHighlight": false,
+    "editor.lineHeight": 16.8,
     "editor.renderLineHighlight": "all",
-    "editor.wordWrap": "on",
     "editor.renderWhitespace": "boundary",
+    "editor.selectionHighlight": false,
+    "editor.tabCompletion": false,
+    "editor.wordWrap": "on",
 
     "files.insertFinalNewline": true,
     "files.exclude": {
@@ -26,28 +27,28 @@
     "telemetry.enableCrashReporter": false,
 
     "workbench.colorTheme": "Freya",
-    "workbench.iconTheme": "vscode-great-icons",
+    "workbench.iconTheme": "file-icons",
     "workbench.welcome.enabled": false,
 
     "window.title": "${activeEditorLong}",
     "window.zoomLevel": 0,
 
-    "go.buildOnSave": true,
-    "go.lintOnSave": true,
-    "go.vetOnSave": true,
-    "go.buildTags": "",
     "go.buildFlags": [],
-    "go.lintTool": "golint",
-    "go.lintFlags": [],
-    "go.vetFlags": [],
+    "go.buildOnSave": true,
+    "go.buildTags": "",
     "go.coverOnSave": false,
-    "go.useCodeSnippetsOnFunctionSuggest": false,
+    "go.formatFlags": [],
     "go.formatOnSave": true, 
     "go.formatTool": "goreturns",
-    "go.formatFlags": [],
-    "go.goroot": "/home/gary/Applications/go",
-    "go.gopath": "/media/Data/Projects/Go",
     "go.gocodeAutoBuild": false,
+    "go.gopath": "/media/Data/Projects/Go",
+    "go.goroot": "/home/gary/Applications/go",
+    "go.lintFlags": [],
+    "go.lintOnSave": true,
+    "go.lintTool": "golint",
+    "go.useCodeSnippetsOnFunctionSuggest": false,
+    "go.vetFlags": [],
+    "go.vetOnSave": true,
 
     "python.pythonPath": "python3",
 
