--- a/config/settings.json
+++ b/config/settings.json
@@ -1,4 +1,5 @@
 {
+    "editor.snippetSuggestions": "top",
     "editor.cursorBlinking": "solid",
     "editor.fontFamily": "'DeJaVu Sans Mono', 'Droid Sans Mono', 'Fira Code', 'Courier New', monospace, 'Droid Sans Fallback'",
     "editor.fontLigatures": true,
@@ -49,6 +50,11 @@
     "go.useCodeSnippetsOnFunctionSuggest": false,
     "go.vetFlags": [],
     "go.vetOnSave": true,
+
+    "php.suggest.basic": false,
+    "php.validate.enable": true,
+    "php.validate.executablePath": null,
+    "php.validate.run": "onSave",
 
     "python.pythonPath": "python3",
 
