--- a/config/settings.json
+++ b/config/settings.json
@@ -1,5 +1,4 @@
 {
-    "editor.snippetSuggestions": "top",
     "editor.cursorBlinking": "solid",
     "editor.fontFamily": "'DeJaVu Sans Mono', 'Droid Sans Mono', 'Fira Code', 'Courier New', monospace, 'Droid Sans Fallback'",
     "editor.fontLigatures": true,
@@ -8,20 +7,21 @@
     "editor.renderLineHighlight": "all",
     "editor.renderWhitespace": "boundary",
     "editor.selectionHighlight": false,
+    "editor.snippetSuggestions": "top",
     "editor.tabCompletion": false,
     "editor.wordWrap": "on",
 
     "files.insertFinalNewline": true,
     "files.exclude": {
+        "**/.DS_Store": true,
         "**/.git": true,
-        "**/.svn": true,
         "**/.hg": true,
-        "**/.DS_Store": true
+        "**/.svn": true
     },
 
     "search.exclude": {
-        "**/node_modules": true,
-        "**/bower_components": true
+        "**/bower_components": true,
+        "**/node_modules": true
     },
 
     "telemetry.enableTelemetry": false,
@@ -39,7 +39,7 @@
     "go.buildTags": "",
     "go.coverOnSave": false,
     "go.formatFlags": [],
-    "go.formatOnSave": true, 
+    "go.formatOnSave": true,
     "go.formatTool": "goreturns",
     "go.gocodeAutoBuild": false,
     "go.gopath": "/media/Data/Projects/Go",
@@ -73,10 +73,30 @@
     "vim.startInInsertMode": false,
     "vim.textwidth": 80,
     "vim.timeout": 1000,
-    "vim.useCtrlKeys": true,
+    "vim.useCtrlKeys": false,
     "vim.useSolidBlockCursor": false,
     "vim.useSystemClipboard": false,
     "vim.otherModesKeyBindingsNonRecursive": [
+        {
+            "before": ["leader", "r", "c"],
+            "after": [],
+            "commands": [
+                {
+                    "command": "workbench.action.openGlobalSettings",
+                    "args": []
+                }
+            ]
+        },
+        {
+            "before": ["leader", "k", "r", "c"],
+            "after": [],
+            "commands": [
+                {
+                    "command": "workbench.action.openGlobalKeybindings",
+                    "args": []
+                }
+            ]
+        },
         {
             "before": ["leader", "q"],
             "after": [],
@@ -98,8 +118,24 @@
             ]
         },
         {
-            "before": ["<C-a>"],
-            "after": ["/", "h", "@", "c", "k", "\n"]
+            "before": ["*"],
+            "after": [],
+            "commands": [
+                {
+                    "command": "actions.find",
+                    "args": []
+                }
+            ]
+        },
+        {
+            "before": ["#"],
+            "after": [],
+            "commands": [
+                {
+                    "command": "actions.find",
+                    "args": []
+                }
+            ]
         }
     ]
 }
