--- a/config/settings.json
+++ b/config/settings.json
@@ -1,4 +1,5 @@
 {
+    "editor.autoClosingBrackets": false,
     "editor.cursorBlinking": "solid",
     "editor.fontFamily": "'DeJaVu Sans Mono', 'Droid Sans Mono', 'Fira Code', 'Courier New', monospace, 'Droid Sans Fallback'",
     "editor.fontLigatures": true,
