--- a/config/settings.json
+++ b/config/settings.json
@@ -1,7 +1,7 @@
 {
     "editor.autoClosingBrackets": false,
     "editor.cursorBlinking": "solid",
-    "editor.fontFamily": "'DeJaVu Sans Mono', 'Droid Sans Mono', 'Fira Code', 'Courier New', monospace, 'Droid Sans Fallback'",
+    "editor.fontFamily": "'DeJaVu Sans Mono', 'Droid Sans Mono', 'Fira Code', 'Courier New', monospace",
     "editor.fontLigatures": true,
     "editor.fontSize": 14,
     "editor.lineHeight": 16.8,
