--- a/config/settings.json
+++ b/config/settings.json
@@ -36,49 +36,22 @@
     "workbench.editor.enablePreview": false,
     "workbench.iconTheme": "file-icons",
     "workbench.welcome.enabled": false,
+    "workbench.colorCustomizations": {
+        "statusBar.foreground": "#999999",
+        "statusBar.background": "#333333",
+        "peekViewEditor.background": "#1F1F1F",
+        "peekView.border": "#595959",
+        "peekViewEditor.matchHighlightBackground": "#295E8E"
+    },
 
-    "go.buildFlags": [],
-    "go.buildOnSave": true,
-    "go.buildTags": "",
-    "go.coverOnSave": false,
-    "go.formatFlags": [],
-    "go.formatOnSave": true,
-    "go.formatTool": "goreturns",
     "go.gocodeAutoBuild": false,
     "go.gopath": "/media/Data/Projects/Go",
     "go.goroot": "/home/gary/Applications/go",
-    "go.lintFlags": [],
-    "go.lintOnSave": true,
-    "go.lintTool": "golint",
-    "go.useCodeSnippetsOnFunctionSuggest": false,
-    "go.vetFlags": [],
-    "go.vetOnSave": true,
 
-    "php.suggest.basic": false,
-    "php.validate.enable": true,
-    "php.validate.executablePath": null,
-    "php.validate.run": "onSave",
-
-    "python.pythonPath": "python3",
-
-    "vim.autoindent": true,
-    "vim.easymotion": false,
-    "vim.history": 50,
     "vim.hlsearch": true,
-    "vim.ignorecase": true,
-    "vim.incsearch": true,
-    "vim.iskeyword": "/\\()\"':,.;<>~!@#$%^&*|+=[]{}`?-",
     "vim.leader": "\\",
-    "vim.scroll": 20,
     "vim.searchHighlightColor": "rgba(41, 94, 142, 1.0)",
-    "vim.showcmd": true,
-    "vim.smartcase": true,
-    "vim.startInInsertMode": false,
-    "vim.textwidth": 80,
-    "vim.timeout": 1000,
     "vim.useCtrlKeys": false,
-    "vim.useSolidBlockCursor": false,
-    "vim.useSystemClipboard": false,
     "vim.otherModesKeyBindingsNonRecursive": [
         {
             "before": ["leader", "r", "c"],
