--- a/config/settings.json
+++ b/config/settings.json
@@ -1,11 +1,14 @@
 {
-    "editor.folding": false,
     "editor.autoClosingBrackets": false,
     "editor.cursorBlinking": "solid",
+    "editor.dragAndDrop": false,
+    "editor.folding": false,
     "editor.fontFamily": "'DeJaVu Sans Mono', 'Droid Sans Mono', 'Fira Code', 'Courier New', monospace",
     "editor.fontLigatures": true,
     "editor.fontSize": 14,
     "editor.lineHeight": 16.8,
+    "editor.minimap.enabled": false,
+    "editor.renderIndentGuides": false,
     "editor.renderLineHighlight": "all",
     "editor.renderWhitespace": "boundary",
     "editor.selectionHighlight": false,
@@ -143,5 +146,6 @@
                 }
             ]
         }
-    ]
+    ],
+    "vim.disableAnnoyingNeovimMessage": true
 }
