--- a/config/settings.json
+++ b/config/settings.json
@@ -8,6 +8,7 @@
     "editor.fontSize": 14,
     "editor.lineHeight": 16.8,
     "editor.minimap.enabled": false,
+    "editor.parameterHints": false,
     "editor.renderIndentGuides": false,
     "editor.renderLineHighlight": "all",
     "editor.renderWhitespace": "boundary",
