--- a/config/settings.json
+++ b/config/settings.json
@@ -11,14 +11,15 @@
     "editor.fontSize": 14,
     "editor.lineHeight": 16.8,
     "editor.minimap.enabled": false,
-    "editor.parameterHints": false,
+    "editor.parameterHints.cycle": false,
+    "editor.parameterHints.enabled": false,
     "editor.renderIndentGuides": false,
     "editor.renderLineHighlight": "all",
     "editor.renderWhitespace": "boundary",
     "editor.selectionHighlight": false,
     "editor.occurrencesHighlight": false,
     "editor.snippetSuggestions": "top",
-    "editor.tabCompletion": false,
+    "editor.tabCompletion": "off",
     "editor.wordWrap": "on",
 
     "explorer.decorations.badges": false,
@@ -47,6 +48,7 @@
 
     "workbench.colorTheme": "Freya",
     "workbench.editor.enablePreview": false,
+    "workbench.editor.restoreViewState": false,
     "workbench.enableExperiments": false,
     "workbench.iconTheme": "file-icons",
     "workbench.settings.enableNaturalLanguageSearch": false,
@@ -74,6 +76,8 @@
     "go.gocodeAutoBuild": false,
     "go.gopath": "/media/Data/Projects/Go",
     "go.goroot": "/home/gary/Applications/go",
+    "go.useCodeSnippetsOnFunctionSuggest": true,
+    "go.useCodeSnippetsOnFunctionSuggestWithoutType": true,
 
     "javascript.implicitProjectConfig.checkJs": true,
 
