Converted freya theme to Json.

--- a/freya-theme/package.json
+++ b/freya-theme/package.json
@@ -20,7 +20,7 @@
 			{
 				"label": "Freya",
 				"uiTheme": "vs-dark",
-				"path": "./themes/freya.tmTheme"
+				"path": "./themes/freya.json"
 			}
 		]
 	}
