Renamed Freya theme file.

--- a/freya-theme/package.json
+++ b/freya-theme/package.json
@@ -20,7 +20,7 @@
 			{
 				"label": "Freya",
 				"uiTheme": "vs-dark",
-				"path": "./themes/freya.json"
+				"path": "./themes/freya.color-theme.json"
 			}
 		]
 	}
