--- a/config/settings.json
+++ b/config/settings.json
@@ -9,15 +9,16 @@
     "editor.fontFamily": "'DeJaVu Sans Mono', 'Droid Sans Mono', 'Fira Code', 'Courier New', monospace",
     "editor.fontLigatures": true,
     "editor.fontSize": 16,
+    "editor.hideCursorInOverviewRuler": true,
     "editor.lineHeight": 18,
     "editor.minimap.enabled": false,
+    "editor.occurrencesHighlight": false,
     "editor.parameterHints.cycle": false,
     "editor.parameterHints.enabled": false,
     "editor.renderIndentGuides": false,
     "editor.renderLineHighlight": "all",
     "editor.renderWhitespace": "boundary",
     "editor.selectionHighlight": false,
-    "editor.occurrencesHighlight": false,
     "editor.snippetSuggestions": "top",
     "editor.tabCompletion": "off",
     "editor.wordWrap": "on",
