--- a/config/settings.json
+++ b/config/settings.json
@@ -48,6 +48,7 @@
     "telemetry.enableCrashReporter": false,
 
     "window.title": "${activeEditorLong}",
+    "window.titleBarStyle": "native",
     "window.zoomLevel": 0,
 
     "workbench.colorTheme": "Freya",
