--- a/config/settings.json
+++ b/config/settings.json
@@ -10,7 +10,7 @@
     "editor.fontLigatures": true,
     "editor.fontSize": 16,
     "editor.hideCursorInOverviewRuler": true,
-    "editor.hover.enabled": false,
+    "editor.hover.delay": 1200,
     "editor.lineHeight": 18,
     "editor.minimap.enabled": false,
     "editor.occurrencesHighlight": false,
@@ -38,6 +38,8 @@
         "**/.hg": true,
         "**/.svn": true,
     },
+
+    "scm.diffDecorations": "none",
 
     "search.exclude": {
         "**/bower_components": true,
