--- a/config/settings.json
+++ b/config/settings.json
@@ -6,7 +6,7 @@
     "editor.cursorBlinking": "solid",
     "editor.dragAndDrop": false,
     "editor.folding": false,
-    "editor.fontFamily": "'DeJaVu Sans Mono', 'Droid Sans Mono', 'Fira Code', 'Courier New', monospace",
+    "editor.fontFamily": "'DeJaVu Sans Mono', 'Droid Sans Mono', monospace",
     "editor.fontLigatures": true,
     "editor.fontSize": 16,
     "editor.hideCursorInOverviewRuler": true,
