--- a/config/settings.json
+++ b/config/settings.json
@@ -6,11 +6,12 @@
     "editor.cursorBlinking": "solid",
     "editor.dragAndDrop": false,
     "editor.folding": false,
-    "editor.fontFamily": "'DeJaVu Sans Mono', 'Droid Sans Mono', monospace",
+    "editor.fontFamily": "'PragmataPro', 'DeJaVu Sans Mono', 'Droid Sans Mono', monospace",
     "editor.fontLigatures": true,
     "editor.fontSize": 16,
     "editor.hideCursorInOverviewRuler": true,
     "editor.hover.delay": 1200,
+    "editor.lightbulb.enabled": false,
     "editor.lineHeight": 18,
     "editor.minimap.enabled": false,
     "editor.occurrencesHighlight": false,
@@ -55,6 +56,7 @@
 
     "workbench.colorTheme": "Freya",
     "workbench.editor.enablePreview": false,
+    "workbench.editor.focusRecentEditorAfterClose": false,
     "workbench.editor.restoreViewState": false,
     "workbench.enableExperiments": false,
     "workbench.iconTheme": "file-icons",
