--- a/config/settings.json
+++ b/config/settings.json
@@ -1,4 +1,6 @@
 {
+    "breadcrumbs.enabled": false,
+
     "editor.autoClosingBrackets": "never",
     "editor.autoClosingQuotes": "never",
     "editor.autoSurround": "never",
@@ -12,7 +14,7 @@
     "editor.hideCursorInOverviewRuler": true,
     "editor.hover.delay": 1200,
     "editor.lightbulb.enabled": false,
-    "editor.lineHeight": 17,
+    "editor.lineHeight": 18,
     "editor.minimap.enabled": false,
     "editor.occurrencesHighlight": false,
     "editor.parameterHints.cycle": false,
@@ -72,8 +74,6 @@
     "go.goroot": "/home/gary/Applications/go",
     "go.useCodeSnippetsOnFunctionSuggest": true,
     "go.useCodeSnippetsOnFunctionSuggestWithoutType": true,
-
-    "javascript.implicitProjectConfig.checkJs": true,
 
     "php.executablePath": "/usr/bin/php",
     "php.suggest.basic": false,
