--- a/config/settings.json
+++ b/config/settings.json
@@ -12,13 +12,13 @@
     "editor.cursorSurroundingLines": 5,
     "editor.dragAndDrop": false,
     "editor.folding": false,
-    "editor.fontFamily": "'Pragmata Pro', 'DeJaVu Sans Mono', 'Droid Sans Mono', monospace",
+    "editor.fontFamily": "'Iosevka Term', 'Pragmata Pro', 'DeJaVu Sans Mono', 'Droid Sans Mono', monospace",
     "editor.fontLigatures": true,
-    "editor.fontSize": 15,
+    "editor.fontSize": 16,
     "editor.hideCursorInOverviewRuler": true,
     "editor.hover.delay": 1000,
     "editor.lightbulb.enabled": false,
-    "editor.lineHeight": 18,
+    "editor.lineHeight": 20,
     "editor.matchBrackets": "near",
     "editor.minimap.enabled": false,
     "editor.occurrencesHighlight": false,
