--- a/config/settings.json
+++ b/config/settings.json
@@ -12,7 +12,7 @@
     "editor.cursorSurroundingLines": 5,
     "editor.dragAndDrop": false,
     "editor.folding": false,
-    "editor.fontFamily": "'Iosevka Term', 'Pragmata Pro', 'DeJaVu Sans Mono', 'Droid Sans Mono', monospace",
+    "editor.fontFamily": "'Iosevka Term Curly', 'Iosevka Term', 'Pragmata Pro', 'DeJaVu Sans Mono', 'Droid Sans Mono', monospace",
     "editor.fontLigatures": true,
     "editor.fontSize": 16,
     "editor.hideCursorInOverviewRuler": true,
@@ -80,6 +80,7 @@
     "workbench.enableExperiments": false,
     "workbench.iconTheme": "file-icons",
     "workbench.list.keyboardNavigation":"simple",
+    "workbench.sash.size": 20,
     "workbench.settings.enableNaturalLanguageSearch": false,
     "workbench.startupEditor": "none",
     "workbench.tree.indent": 24,
