--- a/config/settings.json
+++ b/config/settings.json
@@ -11,10 +11,12 @@
     "editor.cursorBlinking": "solid",
     "editor.cursorSurroundingLines": 5,
     "editor.dragAndDrop": false,
+    "editor.find.cursorMoveOnType": false,
     "editor.folding": false,
     "editor.fontFamily": "'Iosevka Term Curly', 'Iosevka Term', 'Pragmata Pro', 'DeJaVu Sans Mono', 'Droid Sans Mono', monospace",
     "editor.fontLigatures": true,
     "editor.fontSize": 16,
+    "editor.fontWeight": "normal",
     "editor.hideCursorInOverviewRuler": true,
     "editor.hover.delay": 1000,
     "editor.lightbulb.enabled": false,
