--- a/config/settings.json
+++ b/config/settings.json
@@ -8,9 +8,11 @@
     "editor.autoClosingQuotes": "never",
     "editor.autoSurround": "never",
     "editor.codeLens": false,
+    "editor.colorDecorators": false,
     "editor.cursorBlinking": "solid",
     "editor.cursorSurroundingLines": 5,
     "editor.dragAndDrop": false,
+    "editor.find.addExtraSpaceOnTop": false,
     "editor.find.cursorMoveOnType": false,
     "editor.folding": false,
     "editor.fontFamily": "'Iosevka Term Curly', 'Iosevka Term', 'Pragmata Pro', 'DeJaVu Sans Mono', 'Droid Sans Mono', monospace",
@@ -21,6 +23,7 @@
     "editor.hover.delay": 1000,
     "editor.lightbulb.enabled": false,
     "editor.lineHeight": 20,
+    "editor.links": false,
     "editor.matchBrackets": "near",
     "editor.minimap.enabled": false,
     "editor.occurrencesHighlight": false,
@@ -98,6 +101,7 @@
     "go.gocodeAutoBuild": false,
     "go.gopath": "/media/Data/Projects/Go",
     "go.goroot": "/opt/go",
+    "go.toolsManagement.checkForUpdates": "off",
     "go.useCodeSnippetsOnFunctionSuggest": true,
     "go.useCodeSnippetsOnFunctionSuggestWithoutType": true,
 
